// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BlacklistPlugins should not render if not open 1`] = `<DocumentFragment />`;

exports[`BlacklistPlugins should render a modal 1`] = `
<DocumentFragment>
  <div
    class="fixed inset-0 z-50 flex items-center justify-center w-full h-full overflow-overlay"
  >
    <div
      class="fixed z-50 w-full h-full bg-black opacity-50"
      data-testid="modal__overlay"
    />
    <div
      class="sc-AxiKw jCpCzv absolute left-0 right-0 z-50 flex flex-col p-10 mx-auto overflow-hidden rounded-xl bg-theme-background shadow-2xl "
      data-testid="modal__inner"
    >
      <div
        class="absolute top-0 right-0 z-50 mt-5 mr-5 transition-all duration-100 ease-linear rounded bg-theme-primary-100 hover:bg-theme-primary-300 dark:bg-theme-neutral-800 dark:text-theme-neutral-600 dark:hover:bg-theme-neutral-700 dark:hover:text-theme-neutral-400"
      >
        <button
          class="sc-AxirZ gKDmVV w-11 h-11"
          data-testid="modal__close-btn"
          type="button"
        >
          <div
            class="sc-AxjAm hSsKJo"
            height="14"
            width="14"
          >
            <svg>
              cross-slim.svg
            </svg>
          </div>
        </button>
      </div>
      <div
        class="relative"
      >
        <div
          class="relative h-56 mb-10 -mx-10 -mt-10"
        >
          <svg
            class="h-full"
          >
            best-plugins-banner.svg
          </svg>
          <div
            class="absolute bottom-0 left-0 mb-10 ml-10"
          >
            <h2
              class="text-5xl font-extrabold leading-tight m-0 text-white"
            >
              Blacklist
            </h2>
          </div>
        </div>
        <div
          class="flex-1"
        >
          <div
            class="mt-1 text-theme-secondary-text"
          >
            ARK is an open-source blockchain ecosystem that provides users with innovate and easy-to-use blockchain thechnologies. Our supportive community, extensive range of products.
          </div>
          <div
            class="mt-8 -mb-6"
          >
            <div
              class="sc-AxhCb bnbqNj -mt-3"
              role="table"
            >
              <table
                cellpadding="0"
                class="table-auto"
              >
                <thead>
                  <tr
                    class="border-b border-theme-neutral-300 dark:border-theme-neutral-800"
                    role="row"
                  >
                    <th
                      class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
                      colspan="1"
                      data-testid="table__th--0"
                      role="columnheader"
                    >
                      <div
                        class="flex flex-inline align-top hidden"
                      >
                        <div>
                          Logo
                        </div>
                      </div>
                    </th>
                    <th
                      class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
                      colspan="1"
                      data-testid="table__th--1"
                      role="columnheader"
                      style="cursor: pointer;"
                      title="Toggle SortBy"
                    >
                      <div
                        class="flex flex-inline align-top "
                      >
                        <div>
                          Name
                        </div>
                        <div
                          class="flex items-center ml-2 text-theme-neutral dark:text-theme-neutral-dark"
                          data-testid="table__Sort"
                        >
                          <div
                            class="sc-AxjAm hdgaLj"
                            height="12"
                            width="15"
                          >
                            <svg>
                              sort.svg
                            </svg>
                          </div>
                        </div>
                      </div>
                    </th>
                    <th
                      class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
                      colspan="1"
                      data-testid="table__th--2"
                      role="columnheader"
                      style="cursor: pointer;"
                      title="Toggle SortBy"
                    >
                      <div
                        class="flex flex-inline align-top justify-end"
                      >
                        <div>
                          Category
                        </div>
                        <div
                          class="flex items-center ml-2 text-theme-neutral dark:text-theme-neutral-dark"
                          data-testid="table__Sort"
                        >
                          <div
                            class="sc-AxjAm hdgaLj"
                            height="12"
                            width="15"
                          >
                            <svg>
                              sort.svg
                            </svg>
                          </div>
                        </div>
                      </div>
                    </th>
                    <th
                      class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
                      colspan="1"
                      data-testid="table__th--3"
                      role="columnheader"
                    >
                      <div
                        class="flex flex-inline align-top hidden"
                      >
                        <div>
                          Actions
                        </div>
                      </div>
                    </th>
                  </tr>
                </thead>
                <tbody
                  role="rowgroup"
                />
              </table>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BlacklistPlugins should render a modal with blacklist 1`] = `
<DocumentFragment>
  <div
    class="fixed inset-0 z-50 flex items-center justify-center w-full h-full overflow-overlay"
  >
    <div
      class="fixed z-50 w-full h-full bg-black opacity-50"
      data-testid="modal__overlay"
    />
    <div
      class="sc-AxiKw jCpCzv absolute left-0 right-0 z-50 flex flex-col p-10 mx-auto overflow-hidden rounded-xl bg-theme-background shadow-2xl "
      data-testid="modal__inner"
    >
      <div
        class="absolute top-0 right-0 z-50 mt-5 mr-5 transition-all duration-100 ease-linear rounded bg-theme-primary-100 hover:bg-theme-primary-300 dark:bg-theme-neutral-800 dark:text-theme-neutral-600 dark:hover:bg-theme-neutral-700 dark:hover:text-theme-neutral-400"
      >
        <button
          class="sc-AxirZ gKDmVV w-11 h-11"
          data-testid="modal__close-btn"
          type="button"
        >
          <div
            class="sc-AxjAm hSsKJo"
            height="14"
            width="14"
          >
            <svg>
              cross-slim.svg
            </svg>
          </div>
        </button>
      </div>
      <div
        class="relative"
      >
        <div
          class="relative h-56 mb-10 -mx-10 -mt-10"
        >
          <svg
            class="h-full"
          >
            best-plugins-banner.svg
          </svg>
          <div
            class="absolute bottom-0 left-0 mb-10 ml-10"
          >
            <h2
              class="text-5xl font-extrabold leading-tight m-0 text-white"
            >
              Blacklist
            </h2>
          </div>
        </div>
        <div
          class="flex-1"
        >
          <div
            class="mt-1 text-theme-secondary-text"
          >
            ARK is an open-source blockchain ecosystem that provides users with innovate and easy-to-use blockchain thechnologies. Our supportive community, extensive range of products.
          </div>
          <div
            class="mt-8 -mb-6"
          >
            <div
              class="sc-AxhCb bnbqNj -mt-3"
              role="table"
            >
              <table
                cellpadding="0"
                class="table-auto"
              >
                <thead>
                  <tr
                    class="border-b border-theme-neutral-300 dark:border-theme-neutral-800"
                    role="row"
                  >
                    <th
                      class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
                      colspan="1"
                      data-testid="table__th--0"
                      role="columnheader"
                    >
                      <div
                        class="flex flex-inline align-top hidden"
                      >
                        <div>
                          Logo
                        </div>
                      </div>
                    </th>
                    <th
                      class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
                      colspan="1"
                      data-testid="table__th--1"
                      role="columnheader"
                      style="cursor: pointer;"
                      title="Toggle SortBy"
                    >
                      <div
                        class="flex flex-inline align-top "
                      >
                        <div>
                          Name
                        </div>
                        <div
                          class="flex items-center ml-2 text-theme-neutral dark:text-theme-neutral-dark"
                          data-testid="table__Sort"
                        >
                          <div
                            class="sc-AxjAm hdgaLj"
                            height="12"
                            width="15"
                          >
                            <svg>
                              sort.svg
                            </svg>
                          </div>
                        </div>
                      </div>
                    </th>
                    <th
                      class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
                      colspan="1"
                      data-testid="table__th--2"
                      role="columnheader"
                      style="cursor: pointer;"
                      title="Toggle SortBy"
                    >
                      <div
                        class="flex flex-inline align-top justify-end"
                      >
                        <div>
                          Category
                        </div>
                        <div
                          class="flex items-center ml-2 text-theme-neutral dark:text-theme-neutral-dark"
                          data-testid="table__Sort"
                        >
                          <div
                            class="sc-AxjAm hdgaLj"
                            height="12"
                            width="15"
                          >
                            <svg>
                              sort.svg
                            </svg>
                          </div>
                        </div>
                      </div>
                    </th>
                    <th
                      class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
                      colspan="1"
                      data-testid="table__th--3"
                      role="columnheader"
                    >
                      <div
                        class="flex flex-inline align-top hidden"
                      >
                        <div>
                          Actions
                        </div>
                      </div>
                    </th>
                  </tr>
                </thead>
                <tbody
                  role="rowgroup"
                >
                  <tr
                    class="sc-AxgMl bRQeCM group"
                    data-testid="TableRow"
                  >
                    <td
                      class="w-16"
                    >
                      <div
                        class="sc-AxhUy XkfdI"
                      >
                        <svg
                          class="w-12 h-12"
                        >
                          changenow-logo.svg
                        </svg>
                      </div>
                    </td>
                    <td>
                      <div
                        class="sc-AxhUy heXTMG"
                      >
                        <div
                          class="font-semibold text-theme-primary-500 hover:text-theme-primary-400"
                        >
                          ARK Explorer
                        </div>
                        <div
                          class="inline-flex items-center space-x-2"
                        >
                          <span
                            class="text-theme-secondary-text"
                          >
                            ARK Ecosystem
                          </span>
                          <div
                            class="sc-AxjAm pXfjM"
                            height="15"
                            width="15"
                          >
                            <svg>
                              official-ark-plugin.svg
                            </svg>
                          </div>
                          <div
                            class="sc-AxjAm vZRQY"
                            height="16"
                            width="16"
                          >
                            <svg>
                              grant.svg
                            </svg>
                          </div>
                        </div>
                      </div>
                    </td>
                    <td>
                      <div
                        class="sc-AxhUy eaijwM justify-end text-theme-secondary-text"
                      >
                        Utility
                      </div>
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
